--- a/sass/index.scss
+++ b/sass/index.scss
@@ -1,35 +1,40 @@
+
 *{
   font-family: Arial, Helvetica, sans-serif;
   margin: 0;
 }
 a{
-    cursor: pointer;
+  cursor: pointer;
+  text-decoration: none;
+  color: wheat;
+  &:visited{
+    color: wheat;
+  }
 }
 
 .navbar{
-
+  
+  position: sticky;
   overflow: hidden;
-  background-color: deepskyblue;
+  background-color: black;
   width: 100%;
   height: auto;
   min-height: 3em;
 
   a{
     float: left;
-    background-color: deepskyblue;
     padding: 14px 16px;
     height: 100%;
 
     &:hover{
-      background-color:#00baf0;
+      background-color:#101010;
     }
 
     &.onPage{
-        background-color: #0050bf;
+        background-color: #202020;
         color: white;
     }
   }
-
 }
 
 .head{
@@ -38,13 +43,39 @@ a{
   height: auto;
   min-height: 150px;
   background-color: white;
-  color:darkblue;
+  color: #000000;
 }
 
 
 .page{
   text-align: center;
-  background-color:deepskyblue;
+  background-color:#000000;
   height: auto;
   min-height: fit-content;
+  color: wheat;
+}
+
+.card{
+
+  width: auto;
+  max-width: 20%;
+
+  height: auto;
+  
+
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+
+  img{
+    width: 100%;
+  }
+
+  &:hover{
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+  }
+}
+
+.container {
+  
+  background-color: #000000;
 }
