--- a/css/sheridan.css
+++ b/css/sheridan.css
@@ -53,19 +53,21 @@ a:visited {
 .card {
   width: auto;
   max-width: 20%;
+  background-color: black;
   height: auto;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   transition: 0.3s;
+}
+.card a {
+  width: auto;
+  max-width: 20%;
+  height: 100%;
 }
 .card img {
   width: 100%;
 }
 .card:hover {
   box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
-}
-
-.container {
-  background-color: #000000;
 }
 
 a {
