--- a/sass/index.scss
+++ b/sass/index.scss
@@ -59,12 +59,19 @@ a{
 
   width: auto;
   max-width: 20%;
+  background-color: black;
+  text-align: center;
 
   height: auto;
-  
 
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
+
+  a{
+    width: auto; 
+    max-width: 20%;
+    height: 100%;
+  }
 
   img{
     width: 100%;
@@ -75,7 +82,4 @@ a{
   }
 }
 
-.container {
-  
-  background-color: #000000;
-}
+
