--- a/css/sheridan.css
+++ b/css/sheridan.css
@@ -1,5 +1,33 @@
+.navbar {
+  position: fixed;
+  overflow: hidden;
+  top: 0;
+  background-color: black;
+  width: 100%;
+  height: auto;
+  min-height: 3em;
+}
+.navbar img {
+  margin: 5px;
+  margin-top: 10px;
+  float: left;
+  max-width: 30px;
+}
+.navbar a {
+  float: right;
+  padding: 14px 16px;
+  height: 100%;
+}
+.navbar a:hover {
+  background-color: #101010;
+}
+.navbar a.onPage {
+  background-color: #202020;
+  color: white;
+}
+
 * {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Poppins", Arial, sans-serif;
   margin: 0;
 }
 
@@ -12,34 +40,22 @@ a:visited {
   color: wheat;
 }
 
-.navbar {
-  position: sticky;
-  overflow: hidden;
-  background-color: black;
+.head {
+  z-index: -1;
+  position: fixed;
+  text-align: center;
+  margin-top: 150px;
   width: 100%;
   height: auto;
-  min-height: 3em;
-}
-.navbar a {
-  float: left;
-  padding: 14px 16px;
-  height: 100%;
-}
-.navbar a:hover {
-  background-color: #101010;
-}
-.navbar a.onPage {
-  background-color: #202020;
-  color: white;
-}
-
-.head {
-  text-align: center;
-  margin-top: 50px;
-  height: auto;
-  min-height: 150px;
+  min-height: 200px;
   background-color: white;
   color: #000000;
+}
+
+.transparentFrame {
+  background-color: transparent;
+  width: 100%;
+  height: 500px;
 }
 
 .page {
@@ -50,10 +66,31 @@ a:visited {
   color: wheat;
 }
 
+.contentBox {
+  min-width: 250px;
+  width: 50%;
+  margin: auto;
+  text-align: left;
+  color: white;
+}
+.contentBox div {
+  display: inline-block;
+  width: 40%;
+}
+.contentBox .category {
+  margin-right: 2%;
+  text-align: right;
+  color: wheat;
+}
+.contentBox .info {
+  margin-left: 2%;
+}
+
 .card {
   width: auto;
   max-width: 20%;
   background-color: black;
+  text-align: center;
   height: auto;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   transition: 0.3s;
