--- a/sass/index.scss
+++ b/sass/index.scss
@@ -1,6 +1,7 @@
+@import 'navbar';
 
 *{
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Poppins", Arial, sans-serif;
   margin: 0;
 }
 a{
@@ -12,38 +13,23 @@ a{
   }
 }
 
-.navbar{
-  
-  position: sticky;
-  overflow: hidden;
-  background-color: black;
-  width: 100%;
-  height: auto;
-  min-height: 3em;
-
-  a{
-    float: left;
-    padding: 14px 16px;
-    height: 100%;
-
-    &:hover{
-      background-color:#101010;
-    }
-
-    &.onPage{
-        background-color: #202020;
-        color: white;
-    }
-  }
-}
 
 .head{
+  z-index: -1;
+  position: fixed;
   text-align: center;
-  margin-top: 50px;
+  margin-top: 150px;
+  width: 100%;
   height: auto;
-  min-height: 150px;
+  min-height: 200px;
   background-color: white;
   color: #000000;
+}
+
+.transparentFrame{
+  background-color: transparent;
+  width: 100%;
+  height: 500px;
 }
 
 
@@ -53,6 +39,31 @@ a{
   height: auto;
   min-height: fit-content;
   color: wheat;
+}
+
+.contentBox{
+  
+  min-width: 250px;
+  width: 50%;
+  margin: auto;
+  text-align: left;
+  color: white;
+  
+  div{
+    display: inline-block;
+    width: 40%;
+  }
+
+  .category{
+    margin-right: 2%;
+    text-align: right;
+    color: wheat;
+  }
+
+  .info{
+    margin-left: 2%;
+  }
+
 }
 
 .card{
