--- a/sass/index.scss
+++ b/sass/index.scss
@@ -34,11 +34,17 @@ a{
 
 
 .page{
+  padding-top: 2em;
+  padding-bottom: 2em;
   text-align: center;
   background-color:#000000;
   height: auto;
   min-height: fit-content;
   color: wheat;
+
+  h1{
+    color: white;
+  }
 }
 
 .contentBox{
@@ -47,16 +53,18 @@ a{
   width: 50%;
   margin: auto;
   text-align: left;
-  color: white;
   
+  
+  /*
   div{
+    vertical-align: top;
     display: inline-block;
     width: 40%;
   }
+  */
 
   .category{
     margin-right: 2%;
-    text-align: right;
     color: wheat;
   }
 
