--- a/css/index.css
+++ b/css/index.css
@@ -46,12 +46,16 @@ a:visited {
   z-index: -1;
   position: fixed;
   text-align: center;
-  margin-top: 150px;
   width: 100%;
-  height: auto;
-  min-height: 200px;
+  height: 800px;
   background-color: white;
   color: #000000;
+}
+.head h1 {
+  font-size: 20vw;
+}
+.head h2 {
+  font-size: 6vw;
 }
 
 .transparentFrame {
