--- a/sass/index.scss
+++ b/sass/index.scss
@@ -24,7 +24,7 @@ a{
   color: #000000;
 
   h1{
-    font-size: 20vw; 
+    font-size: 12vw; 
   }
 
   h2{
@@ -37,7 +37,7 @@ a{
 .transparentFrame{
   background-color: transparent;
   width: 100%;
-  height: 500px;
+  height: 800px;
 }
 
 
@@ -81,6 +81,27 @@ a{
   }
 
 }
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    padding: 12px 16px;
+    z-index: 1;
+  }
+
+  &:hover .dropdown-content {
+    display: block;
+  }
+
+}
+
 
 .card{
 
