--- a/css/index.css
+++ b/css/index.css
@@ -84,7 +84,6 @@ a:visited {
 .page {
   padding-top: 2em;
   padding-bottom: 2em;
-  text-align: center;
   background-color: #000000;
   height: auto;
   min-height: fit-content;
@@ -92,27 +91,24 @@ a:visited {
 }
 .page h1 {
   color: white;
+  text-align: center;
+  margin-top: 3vh;
+  margin-bottom: 3vh;
 }
 
 .contentBox {
   min-width: 250px;
-  width: 50%;
-  margin: auto;
+  width: 100%;
   text-align: left;
-  /*
-  div{
-    vertical-align: top;
-    display: inline-block;
-    width: 40%;
-  }
-  */
 }
-.contentBox .category {
-  margin-right: 2%;
+.contentBox h2 {
   color: wheat;
+  margin-top: 2vh;
+  margin-bottom: 2vh;
 }
-.contentBox .info {
-  margin-left: 2%;
+.contentBox .info h3 {
+  text-align: center;
+  color: white;
 }
 
 .card {
