--- a/css/index.css
+++ b/css/index.css
@@ -3,22 +3,18 @@
   overflow: hidden;
   top: 0;
   background-color: black;
+  color: wheat;
   width: 100%;
-  height: auto;
-  min-height: 3vh;
+  height: 5vh;
 }
 .navbar img {
+  height: 5vh;
   float: left;
-  max-block-size: 2em;
-  min-block-size: 1em;
-  margin-top: 0.1em;
-  margin-left: 0.1em;
+  width: min-content;
 }
-.navbar a {
-  margin-top: 1vh;
+.navbar div {
   float: right;
-  padding: 1vh 1vw;
-  height: 100%;
+  height: 5vh;
 }
 .navbar a:hover {
   background-color: #101010;
@@ -29,8 +25,10 @@
 }
 
 .dropdown {
+  margin: 0;
+  padding: 0;
   position: relative;
-  display: inline-block;
+  display: inline;
 }
 .dropdown .dropdown-content {
   display: none;
@@ -38,7 +36,6 @@
   background-color: #f9f9f9;
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-  padding: 12px 16px;
   z-index: 1;
 }
 .dropdown:hover .dropdown-content {
