--- a/sass/navbar.scss
+++ b/sass/navbar.scss
@@ -4,24 +4,24 @@
   overflow: hidden;
   top: 0;
   background-color: black;
+  color: wheat;
   width: 100%;
-  height: auto;
-  min-height: 3vh;
+  height: 5vh;
+  overflow: visible;
+  
 
-  img{    
+  img{
+    height: 5vh;    
     float: left;
-    max-block-size: 2em;
-    min-block-size: 1em;
-    margin-top: 0.1em;
-    margin-left: 0.1em;
+    width:min-content;
+  }
+
+  div{
+    float: right;
+    height: 5vh;
   }
 
   a{
-    margin-top: 1vh;
-    float: right;
-    padding: 1vh 1vw;
-    
-    height: 100%;
 
     &:hover{
       background-color:#101010;
@@ -33,9 +33,12 @@
     }
   }
 }
+
 .dropdown {
+  margin: 0;
+  padding: 0;
   position: relative;
-  display: inline-block;
+  display: inline;
 
   .dropdown-content {
     display: none;
@@ -43,7 +46,6 @@
     background-color: #f9f9f9;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    padding: 12px 16px;
     z-index: 1;
   }
 
