--- a/sass/index.scss
+++ b/sass/index.scss
@@ -31,6 +31,13 @@ a{
     font-size: 6vw;
   }
   
+  .centered {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+  
 }
 
 
