--- a/sass/navbar.scss
+++ b/sass/navbar.scss
@@ -24,6 +24,11 @@
 
   a{
 
+    float: right;
+    display: block;
+    text-align: center;
+    padding: 0.9em;
+
     &:hover{
       background-color:#101010;
     }
