--- a/sass/index.scss
+++ b/sass/index.scss
@@ -57,16 +57,42 @@ a{
   color: wheat;
 
   h1{
+    font-size: 7vh;
     color: white;
     text-align: center;
     margin-top: 3vh;
     margin-bottom: 3vh;
   }
 
+  h2{
+    font-size: 6vh;
+  }
+
   h3{
+    font-size: 5vh;
+    color: white;
+    margin-bottom: 5vh;
+  }
+
+  p{
+    font-size: 4vh;
     color: white;
   }
 
+}
+
+
+.centerBox{
+  text-align: center;
+  display: inline;
+  margin-top: 5vh;
+
+  .l{
+    margin-right: 25vw;
+    color: wheat;
+  }
+  .r{
+  }
 }
 
 .contentBox{
@@ -101,6 +127,7 @@ a{
   max-width: 20%;
   background-color: black;
   text-align: center;
+  border: 2px solid white;
 
   height: auto;
 
