--- a/css/sheridan.css
+++ b/css/sheridan.css
@@ -19,6 +19,7 @@
   height: 5vh;
 }
 .navbar a {
+  font-size: 2.4vh;
   float: right;
   display: block;
   text-align: center;
@@ -101,15 +102,34 @@ a:visited {
   color: wheat;
 }
 .page h1 {
+  font-size: 7vh;
   color: white;
   text-align: center;
   margin-top: 3vh;
   margin-bottom: 3vh;
 }
+.page h2 {
+  font-size: 6vh;
+}
 .page h3 {
+  font-size: 5vh;
+  color: white;
+  margin-bottom: 5vh;
+}
+.page p {
+  font-size: 4vh;
   color: white;
 }
 
+.centerBox {
+  text-align: center;
+  display: inline;
+  margin-top: 5vh;
+}
+.centerBox .l {
+  margin-right: 25vw;
+  color: wheat;
+}
 .contentBox {
   min-width: 250px;
   width: 100%;
@@ -131,6 +151,7 @@ a:visited {
   max-width: 20%;
   background-color: black;
   text-align: center;
+  border: 2px solid white;
   height: auto;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   transition: 0.3s;
