--- a/css/sheridan.css
+++ b/css/sheridan.css
@@ -187,12 +187,27 @@ a:visited {
 }
 
 .head {
+  background-image: url("../assets/sheridan_img.png");
+}
+.head h1 {
+  background-color: rgba(0, 0, 0, 0.61);
+  backdrop-filter: blur(5px);
+  font-size: 6vh;
+}
+.head h2 {
+  font-size: 3vh;
+}
+
+.head {
   background-color: white;
-  color: darkblue;
+  color: deepskyblue;
 }
 
 .page {
   background-color: deepskyblue;
+}
+.page * {
+  margin-left: 1vw;
 }
 
 /*# sourceMappingURL=sheridan.css.map */
