--- a/sass/index.scss
+++ b/sass/index.scss
@@ -79,6 +79,15 @@ a{
     color: white;
   }
 
+  ul{
+    margin-top: 6vh;
+    margin-bottom: 6vh;
+  }
+  li{
+    font-size: 4vh;
+    color: white;
+  }
+
 }
 
 
@@ -91,8 +100,8 @@ a{
     margin-right: 25vw;
     color: wheat;
   }
-  .r{
-  }
+
+  
 }
 
 .contentBox{
