--- a/sass/sheridan.scss
+++ b/sass/sheridan.scss
@@ -36,6 +36,8 @@ a{
   h2{
     font-size: 3vh;
   }
+
+  
 }
 
 .head{
@@ -50,5 +52,16 @@ a{
   *{
     margin-left: 1vw;
   }
+
+  p{
+    margin-top: 2vh;
+    margin-bottom: 2vh;
+  }
+
+  h2{
+    font-size: 2.8vh;
+
+  }
+
 }
 
