--- a/css/index.css
+++ b/css/index.css
@@ -120,6 +120,14 @@ a:visited {
   font-size: 4vh;
   color: white;
 }
+.page ul {
+  margin-top: 6vh;
+  margin-bottom: 6vh;
+}
+.page li {
+  font-size: 4vh;
+  color: white;
+}
 
 .centerBox {
   text-align: center;
@@ -130,6 +138,7 @@ a:visited {
   margin-right: 25vw;
   color: wheat;
 }
+
 .contentBox {
   min-width: 250px;
   width: 100%;
