--- a/sass/index.scss
+++ b/sass/index.scss
@@ -134,6 +134,7 @@ a{
 
   width: auto;
   max-width: 20%;
+  min-width: 20em;
   background-color: black;
   text-align: center;
   border: 2px solid white;
