--- a/css/sheridan.css
+++ b/css/sheridan.css
@@ -158,6 +158,7 @@ a:visited {
 .card {
   width: auto;
   max-width: 20%;
+  min-width: 20em;
   background-color: black;
   text-align: center;
   border: 2px solid white;
