--- a/sass/jci.scss
+++ b/sass/jci.scss
@@ -26,7 +26,7 @@ a{
 
 
 .head{
-  background-image: url("../assets/NCR_img.jpg");
+  background-image: url("../assets/jci.jpg");
   background-repeat: no-repeat;
   background-size: contain;
   background-position: center;
