--- a/css/jci.css
+++ b/css/jci.css
@@ -197,7 +197,7 @@ a:visited {
 }
 
 .head {
-  background-image: url("../assets/NCR_img.jpg");
+  background-image: url("../assets/jci.jpg");
   background-repeat: no-repeat;
   background-size: contain;
   background-position: center;
